--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "antd": "^5.25.1",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "sass": "^1.89.0",
     "yup": "^1.6.1"
   },
