--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sass": "^1.89.0",
