--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.81.2",
     "antd": "^5.25.1",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
