--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.25.1",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.19.2",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
